# MindaEngine

./: CMakeLists.txt  Debug.bat  README.md  Release.bat
Source/: MindaWindow.rc  Resource.h  framework.h  main.cpp
